Monorepo setup for 1.10.0 (Java 21, Gradle 9.x)