@@ -13,13 +13,13 @@ import java.io.File;
 
 public class DuplicateConfigurationDetectedException extends RuntimeException {
 	public DuplicateConfigurationDetectedException(File file1, File file2) {
-		super(String.format("The same configuration file was detected at two different locations:\n%s\nand\n%s", 
-						(file1 == null ? "" : file1.getAbsolutePath()), 
-						(file2 == null ? "" : file2.getAbsolutePath()))
+		super("The same configuration file was detected at two different locations:\n%s\nand\n%s".formatted(
+               (file1 == null ? "" : file1.getAbsolutePath()),
+               (file2 == null ? "" : file2.getAbsolutePath()))
 		);
 	}
 
 	public DuplicateConfigurationDetectedException(String propertyName) {
-		super(String.format("The configuration property '%s' was detected in two different properties files.", propertyName));
+		super("The configuration property '%s' was detected in two different properties files.".formatted(propertyName));
 	}
 }
