@@ -15,6 +15,7 @@ import com.google.common.collect.Lists;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
+import org.nrg.xdat.base.BaseElement;
 import org.nrg.xdat.collections.DisplayFieldCollection;
 import org.nrg.xdat.display.*;
 import org.nrg.xdat.security.ElementSecurity;
@@ -261,7 +262,7 @@ public class SchemaElement implements SchemaElementI {
 		 	if (! f.isMultiple())
 		 	{
 		 		GenericWrapperElement foreign = (GenericWrapperElement)f.getReferenceElement();
-		 		GenericWrapperField pk = foreign.getAllPrimaryKeys().get(0);
+		 		GenericWrapperField pk = foreign.getAllPrimaryKeys().getFirst();
 		 		
 		 		DisplayField df = new DisplayField(this.getDisplay());
 				df.setId(XftStringUtils.cleanColumnName(s).toUpperCase());
@@ -324,7 +325,7 @@ public class SchemaElement implements SchemaElementI {
 		}
 		final String resolvedXmlPath;
 		if (f.isReference() && !f.isMultiple()) {
-			resolvedXmlPath = xmlPath + XFT.PATH_SEPARATOR + ((GenericWrapperElement) f.getReferenceElement()).getAllPrimaryKeys().get(0).getName();
+			resolvedXmlPath = xmlPath + XFT.PATH_SEPARATOR + ((GenericWrapperElement) f.getReferenceElement()).getAllPrimaryKeys().getFirst().getName();
 		} else {
 			resolvedXmlPath = xmlPath;
 		}
@@ -338,7 +339,7 @@ public class SchemaElement implements SchemaElementI {
 				break;
 			}else if (df.getElements().size() == 1 && df.getContent().size()==0)
 			{
-				DisplayFieldElement dfe = df.getElements().get(0);
+				DisplayFieldElement dfe = df.getElements().getFirst();
 				if (dfe.getSchemaElementName().equalsIgnoreCase(resolvedXmlPath)
 						|| dfe.getSchemaElementName().equals(localName))
 				{
@@ -627,6 +628,20 @@ public class SchemaElement implements SchemaElementI {
 	
 	public boolean instanceOf(String s){
 		return this.getGenericXFTElement().getExtendedXSITypes().contains(s);
+	}
+
+	Boolean isDDD = null;
+
+	public boolean isDynamicDatatype(){
+		if(isDDD==null){
+			try {
+				getCorrespondingJavaClass();
+				isDDD=false;
+			} catch (ClassNotFoundException e) {
+				isDDD=true;
+			}
+		}
+		return isDDD;
 	}
 }
 
