@@ -120,7 +120,7 @@ public class ModifyItem  extends SecureAction {
 
                 al.add(populater.getItem());
             }
-            first = (XFTItem)al.get(0);
+            first = (XFTItem)al.getFirst();
             try {
                 preProcess(first,data,context);
             } catch (RuntimeException e1) {
